<resources>
    <string name="app_name">Listopia</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_trash">Trash section has been clicked.</string>
    <string name="navigation_help">Help section has been clicked.</string>
    <string name="navigation_feedback">Feedback section has been clicked.</string>
    <string name="navigation_recommend">Recommend section has been clicked.</string>
    <string name="navigation_settings">Settings section has been clicked.</string>
    <string name="navigation_something_els">Something els has been clicked.</string>

    <!--Titles-->
    <string name="title_shopping_list">My Lists</string>
    <string name="title_shopping_list_create">Create List</string>
    <string name="title_shopping_list_edit">Edit List</string>
    <string name="title_products">Products</string>
    <string name="title_product_add">Add Product</string>
    <string name="title_product_edit">Edit Product</string>
    <string name="title_friend_share">List share</string>
    <string name="title_friend_add">Add friend</string>
    <string name="title_settings">Settings</string>

    <!--Sub menu_options-->
    <string name="submenu_shopping_list_options_delete_all">Delete all shopping lists</string>
    <string name="submenu_product_options_delete_all">Delete all products</string>
    <string name="submenu_friend_options_delete_all">Delete all friends</string>

    <!--Popup menu options-->
    <string name="popup_menu_rename_shopping_list">Rename</string>
    <string name="popup_menu_delete_shopping_list">Delete</string>
    <string name="popup_menu_share_shopping_list">Share</string>
    <string name="popup_menu_copy_shopping_list">Copy</string>
    <string name="popup_menu_edit_product_list">Edit</string>
    <string name="popup_menu_delete_product_list">Delete</string>
    <string name="popup_menu_delete_friend">Delete</string>

    <!--Header drawer-->
    <string name="header_sign_in_sign_up">Sign in or sign up</string>

    <!--Labels-->
    <string name="label_sign_in_and_sync">To sync and share your lists</string>
    <string name="label_list_name">List name</string>
    <string name="label_friend_email">Friend email address</string>
    <string name="label_options">Options</string>
    <string name="label_friends">Friends</string>
    <string name="label_product_name">Product name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_price">Price</string>
    <string name="label_unit">Unit</string>
    <string name="label_notes">Notes</string>
    <string name="label_cart_total">Cart total:</string>
    <string name="label_list_total">List total:</string>

    <!--Messages-->
    <string name="success_shopping_list_create">Successfully created shopping list.</string>
    <string name="success_shopping_list_edit">Successfully edited shopping list.</string>
    <string name="success_shopping_list_delete">Successfully deleted shopping list.</string>
    <string name="success_product_add">Successfully added product.</string>
    <string name="success_product_edit">Successfully edited product.</string>
    <string name="success_product_delete">Successfully deleted product.</string>
    <string name="success_friend_add">Successfully added friend.</string>
    <string name="success_friend_delete">Successfully deleted friend.</string>
    <string name="success_editor_deleted">Editor has been removed from the list</string>
    <string name="success_editor_added">Editor has been added to the list</string>
    <string name="success_logout">Successfully Signed Out</string>

    <!--Errors-->
    <string name="error_room">Error with Room operation.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_list_name">List name can not be empty.</string>
    <string name="error_product_name">Product name can not be empty.</string>
    <string name="error_email_is_empty">Please insert your friend email.</string>
    <string name="error_email_is_invalid">Email address is invalid.</string>

    <!--Actions-->
    <string name="action_create">Create</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>

    <!--Navigation labels-->
    <string name="label_trash">Trash</string>
    <string name="label_help">Help</string>
    <string name="label_send_feedback">Send Feedback</string>
    <string name="label_recommend_listopia">Recommend Listopia</string>
    <string name="label_settings">Settings</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_slash">/</string>

    <!--Dialog-->
    <string name="dialog_title_friend_invitation">Friend invitation</string>
    <string name="dialog_message_friend_invitation">User does not exists in the system, do you want to send them an E-mail invitation?</string>
    <string name="dialog_message_friend_not_signed">To use friend share function, you have to sign in first.</string>

    <!--Notifications -->
    <string name="notification_shopping_list_updated">Shopping list has been updated</string>
    <string name="notification_shopping_list_updated_name">With unknown name.</string>
    <string name="notification_no_internent_connection_title">No internet connection</string>
    <string name="notification_no_internent_connection_body">Your lists are not synchronize with our servers.</string>

    <!-- Preference   -->
    <string name="preference_section_general">General</string>
    <string name="preference_currency_title">Currency</string>
    <string name="preference_currency_dialog_edit">Currency value</string>
    <string name="preference_currency_default_value">$</string>
    <string name="preference_text_size_title">Text Size</string>

    <string name="key_text_size" translatable="false">keyTextSize</string>
    <string name="key_currency" translatable="false">keyCurrency</string>
    <string name="key_token" translatable="false">keyToken</string>
    <string name="key_user_id" translatable="false">keyUserId</string>


    <!-- Preference text size -->
    <string name="settings_text_small_label">Small</string>
    <string name="settings_text_medium_label">Medium</string>
    <string name="settings_text_moderate_label">Moderate</string>
    <string name="settings_text_large_label">Large</string>
    <string name="settings_text_extra_label">Extra Large</string>

    <!-- Preference text size value-->
    <string name="settings_text_small_value">15</string>
    <string name="settings_text_medium_value">17</string>
    <string name="settings_text_moderate_value">20</string>
    <string name="settings_text_large_value">23</string>
    <string name="settings_text_extra_value">26</string>

</resources>
