<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_trash"
        android:icon="@drawable/ic_delete"
        android:title="@string/label_trash">
    </item>
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help"
        android:title="@string/label_help">
    </item>
    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/label_send_feedback">
    </item>
    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/ic_favorites"
        android:title="@string/label_recommend_listopia">
    </item>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/label_settings">
    </item>
    <item
        android:id="@+id/navigation_sign_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/label_sign_out">
    </item>
</menu>